--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Docker engine to allow Codacy to have [stylelint](https://github.com/stylelint/stylelint) support.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "documentation": "node test.js"
   },
   "repository": {
     "type": "git",
