--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/caldasdeoliveira/codacy-stylelint#readme",
   "dependencies": {
-    "stylelint": "^9.3.0"
+    "stylelint": "^9.3:0"
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-config-standard": "^18.2.0",
   }
 }
