--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,13 +19,19 @@ jobs:
           working_directory: ~/codacy-plugins-test
           command: sbt compile
       - run:
+          name: Install nodejs 10
+          command: |
+            curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
+            sudo apt-get install -y nodejs
+            ./scripts/install.sh
+      - run:
           name: Test project
           working_directory: ~/workdir
           command: ./scripts/test.sh
       - run:
           name: Publish tool docker locally
           working_directory: ~/workdir
-          command: sbt 'set version in Docker := "latest"' "set name := \"$CIRCLE_PROJECT_REPONAME\"" docker:publishLocal
+          command: sbt 'set version in Docker := "latest"' docker:publishLocal
       - save_cache:
           key: dependencies-{{ checksum "build.sbt" }}
           paths:
@@ -51,9 +57,9 @@ jobs:
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               docker login -u $DOCKER_USER -p $DOCKER_PASS
-              docker tag $CIRCLE_PROJECT_REPONAME codacy/$CIRCLE_PROJECT_REPONAME
-              docker tag $CIRCLE_PROJECT_REPONAME codacy/$CIRCLE_PROJECT_REPONAME:1.0.$CIRCLE_BUILD_NUM
-              docker push codacy/$CIRCLE_PROJECT_REPONAME
+              docker tag codacy/$CIRCLE_PROJECT_REPONAME:latest codacy/$CIRCLE_PROJECT_REPONAME:1.0.$CIRCLE_BUILD_NUM
+              docker push codacy/$CIRCLE_PROJECT_REPONAME:1.0.$CIRCLE_BUILD_NUM
+              docker push codacy/$CIRCLE_PROJECT_REPONAME:latest
             fi
 
 workflows:
