--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 
 orbs:
-  codacy: codacy/base@0.3.8
-  codacy_plugins_test: codacy/plugins-test@0.2.0
+  codacy: codacy/base@1.2.1
+  codacy_plugins_test: codacy/plugins-test@0.7.0
 
 workflows:
   version: 2
@@ -26,6 +26,7 @@ workflows:
             - codacy/checkout_and_version
       - codacy_plugins_test/run:
           name: plugins_test
+          run_multiple_tests: true
           requires:
             - publish_docker_local
       - codacy/sbt:
