--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,18 @@
 version: 2.1
 
 orbs:
-  codacy: codacy/base@2.0.1
-  codacy_plugins_test: codacy/plugins-test@0.7.1
+  codacy: codacy/base@2.6.4
+  codacy_plugins_test: codacy/plugins-test@0.10.3
+  coverage-reporter: codacy/coverage-reporter@7.5.0
+
+jobs:
+  send-coverage-report:
+    machine: true
+    working_directory: ~/workdir
+    steps:
+      - attach_workspace:
+          at: ~/workdir
+      - coverage-reporter/send_report
 
 workflows:
   version: 2
@@ -11,34 +21,41 @@ workflows:
       - codacy/checkout_and_version:
           write_sbt_version: true
       - codacy/sbt:
-          name: publish_docker_local
+          name: test_and_coverage
           cmd: |
             sbt "set scalafmtUseIvy in ThisBuild := false;
                  scalafmt::test;
                  test:scalafmt::test;
-                 sbt:scalafmt::test;
-                 set name := \"$CIRCLE_PROJECT_REPONAME\";
+                 sbt:scalafmt::test;"
+            curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
+            sudo apt-get install -y nodejs
+            ./scripts/install.sh
+            sbt "coverage;
+                 test;
+                 coverageReport;
+                 coverageAggregate"
+          requires:
+            - codacy/checkout_and_version
+      - send-coverage-report:
+          requires:
+            - test_and_coverage
+      - codacy/sbt:
+          name: publish_docker_local
+          cmd: |
+            sbt "set scalafmtUseIvy in ThisBuild := false;
                  set version in Docker := \"latest\";
                  docker:publishLocal"
             docker save --output docker-image.tar $CIRCLE_PROJECT_REPONAME:latest
           persist_to_workspace: true
           requires:
-            - codacy/checkout_and_version
+            - test_and_coverage
       - codacy_plugins_test/run:
           name: plugins_test
           run_multiple_tests: true
           requires:
             - publish_docker_local
-      - codacy/sbt:
-          name: publish_dockerhub
+      - codacy/publish_docker:
           context: CodacyDocker
-          cmd: |
-            docker load --input docker-image.tar
-            docker login -u $DOCKER_USER -p $DOCKER_PASS
-            docker tag $CIRCLE_PROJECT_REPONAME codacy/$CIRCLE_PROJECT_REPONAME:$(cat .version)
-            docker tag $CIRCLE_PROJECT_REPONAME codacy/$CIRCLE_PROJECT_REPONAME:latest
-            docker push codacy/$CIRCLE_PROJECT_REPONAME:$(cat .version)
-            docker push codacy/$CIRCLE_PROJECT_REPONAME:latest
           requires:
             - plugins_test
           filters:
@@ -49,4 +66,4 @@ workflows:
           name: tag_version
           context: CodacyAWS
           requires:
-            - publish_dockerhub
+            - codacy/publish_docker
