--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,8 @@ workflows:
             nvm alias default v8.11.3
 
             npm install
-            export PATH=$PATH:$(pwd)/node_modules/.bin
-            STYLELINT_CONFIG_BASEDIR=$(pwd)/node_modules sbt "set scalafmtUseIvy in ThisBuild := false;
+            export PATH=$PATH:$PWD/node_modules/.bin
+            STYLELINT_CONFIG_BASEDIR=$PWD/node_modules sbt "set scalafmtUseIvy in ThisBuild := false;
                  scalafmt::test;
                  test:scalafmt::test;
                  sbt:scalafmt::test;
