Add default true for declaration-no-important

--- a/src/main/resources/default_configs/stylelint-config-recommended-standard.json
+++ b/src/main/resources/default_configs/stylelint-config-recommended-standard.json
@@ -17,6 +17,7 @@
   "function-calc-no-unspaced-operator": true,
   "function-linear-gradient-no-nonstandard-direction": true,
   "keyframe-declaration-no-important": true,
+  "declaration-no-important": true,
   "media-feature-name-no-unknown": true,
   "no-descending-specificity": true,
   "no-duplicate-at-import-rules": true,
