--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,14 +1,13 @@
 name: auto-merge
 
 on:
-  pull_request:
+  pull_request
 
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ahmadnassri/action-dependabot-auto-merge@v2
+      - uses: fastify/github-action-merge-dependabot@v2.1.1
         with:
-          target: minor
           github-token: ${{ secrets.DEPENDABOT_AUTO_MERGE_USER_TOKEN }}
