Updated stylelint to 14.1.0

--- a/package.json
+++ b/package.json
@@ -4,29 +4,31 @@
     "@lego/stylelint-config-prettier": "^6.1.2",
     "@lego/stylelint-config-scss": "^6.1.2",
     "postcss": "^8.4.5",
+    "postcss-less": "^5.0.0",
+    "postcss-scss": "^4.0.2",
     "prettier": "^2.5.1",
-    "stylelint": "^13.13.1",
+    "stylelint": "^14.1.0",
     "stylelint-a11y": "^1.2.3",
     "stylelint-config-css-modules": "^2.3.0",
     "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-recommended": "^5.0.0",
-    "stylelint-config-recommended-scss": "^4.3.0",
-    "stylelint-config-sass-guidelines": "^8.0.0",
+    "stylelint-config-recommended": "^6.0.0",
+    "stylelint-config-recommended-scss": "^5.0.2",
+    "stylelint-config-sass-guidelines": "^9.0.1",
     "stylelint-config-slds": "^1.0.8",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-config-standard-scss": "^1.1.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-config-suitcss": "^17.0.0",
-    "stylelint-config-twbs-bootstrap": "^2.2.4",
+    "stylelint-config-twbs-bootstrap": "^3.0.0",
     "stylelint-config-wordpress": "^17.0.0",
     "stylelint-csstree-validator": "^2.0.0",
     "stylelint-declaration-strict-value": "^1.8.0",
     "stylelint-declaration-use-variable": "^1.7.3",
-    "stylelint-order": "^4.1.0",
-    "stylelint-prettier": "^1.2.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-prettier": "^2.0.0",
     "stylelint-processor-styled-components": "^1.10.0",
     "stylelint-rscss": "^0.4.0",
-    "stylelint-scss": "^3.21.0",
+    "stylelint-scss": "^4.0.1",
     "stylelint-selector-bem-pattern": "^2.1.1",
     "stylelint-suitcss": "^4.0.0"
   }
