fix: add recommended values for all rules CY-3275

--- a/src/main/resources/default_configs/stylelint-config-recommended-standard.json
+++ b/src/main/resources/default_configs/stylelint-config-recommended-standard.json
@@ -156,5 +156,202 @@
   "value-list-comma-newline-after": "always-multi-line",
   "value-list-comma-space-after": "always-single-line",
   "value-list-comma-space-before": "never",
-  "value-list-max-empty-lines": 0
+  "value-list-max-empty-lines": 0,
+  "alpha-value-notation": "number",
+	"at-rule-allowed-list": ["import", "media", "extend", "keyframes"],
+	"at-rule-blacklist": [],
+	"at-rule-disallowed-list": [],
+	"at-rule-name-newline-after": "always",
+  "at-rule-no-vendor-prefix": true,
+	"at-rule-property-required-list": {},
+	"at-rule-property-requirelist": {},
+	"at-rule-semicolon-space-before": "never",
+  "at-rule-whitelist": ["import", "media", "extend", "keyframes"],
+	"block-closing-brace-space-after": "always-single-line",
+	"block-opening-brace-newline-before": "always",
+	"color-function-notation": "modern",
+	"color-named": "never",
+	"color-no-hex": true,
+	"comment-word-blacklist": [],
+	"comment-word-disallowed-list": [],
+	"custom-media-pattern": "",
+	"custom-property-pattern": "",
+	"declaration-block-no-redundant-longhand-properties": [
+    true,
+    {
+      "ignoreShorthands": []
+    }
+  ],  
+	"declaration-block-semicolon-newline-before": "never-multi-line",
+	"declaration-no-important": true,
+	"declaration-property-unit-allowed-list": [
+    {
+      "/^border/": ["px"],
+      "/^font": ["rem"]
+    }, 
+    { 
+      "ignore": ["inside-function"]
+    }
+  ],
+	"declaration-property-unit-blacklist": {
+    "font-size": ["em", "px"],
+    "/^animation/": ["s"]
+  },
+	"declaration-property-unit-disallowed-list": {
+    "font-size": ["em", "px"],
+    "/^animation/": ["s"]
+  },
+	"declaration-property-unit-whitelist": {
+    "/^border/": ["px"],
+    "/^font": ["rem"]
+  },
+  "declaration-property-value-allowed-list": {},
+  "declaration-property-value-blacklist": {},
+  "declaration-property-value-disallowed-list": {},
+  "declaration-property-value-whitelist": {},
+	"font-family-name-quotes": "always-unless-keyword",
+	"font-weight-notation": [
+    "named-where-possible",
+    {
+      "ignore": ["relative"]
+    }
+  ],
+	"function-allowed-list": ["scale", "rgba", "linear-gradient"],
+	"function-blacklist": [],
+	"function-calc-no-invalid": true,
+	"function-comma-newline-before": "never-multi-line",
+	"function-disallowed-list": [],
+	"function-url-no-scheme-relative": true,
+	"function-url-quotes": [
+    "always",
+    {
+      "except": ["empty"]
+    }
+  ],
+	"function-url-scheme-allowed-list": ["data", "/^http/"],
+	"function-url-scheme-blacklist": ["file"],
+	"function-url-scheme-disallowed-list": ["file"],
+	"function-url-scheme-whitelist": ["data", "/^http/"],
+	"function-whitelist": ["scale", "rgba", "linear-gradient"],
+	"hue-degree-notation": "angle",
+	"keyframes-name-pattern": "kf-.+",
+	"linebreaks": "unix",
+	"max-line-length": 80,
+	"max-nesting-depth": 5,
+	"media-feature-name-allowed-list": ["/^max-/", "/^min-/"],
+	"media-feature-name-blacklist": [],
+	"media-feature-name-disallowed-list": [],
+	"media-feature-name-no-vendor-prefix": true,
+	"media-feature-name-value-allowed-list": {
+    "/width$/": ["768px", "1024px"]
+  },
+	"media-feature-name-value-whitelist": {
+    "/width$/": ["768px", "1024px"]
+  },
+	"media-feature-name-whitelist": ["/^max-/", "/^min-/"],
+	"media-query-list-comma-newline-before": "never-multi-line",
+	"no-empty-first-line": true,
+	"no-unknown-animations": true,
+	"number-max-precision": [
+    3,
+    {
+      "ignoreProperties": [],
+      "ignoreUnits": []
+    }
+  ],
+	"property-allowed-list": [],
+	"property-blacklist": [],
+	"property-disallowed-list": [],
+	"property-no-vendor-prefix": true,
+	"property-whitelist": [],
+	"selector-attribute-operator-allowed-list": [],
+	"selector-attribute-operator-blacklist": [],
+	"selector-attribute-operator-disallowed-list": [],
+	"selector-attribute-operator-whitelist": [],
+	"selector-attribute-quotes": "always",
+	"selector-class-pattern": "foo-[a-z]+",
+	"selector-combinator-allowed-list": [],
+	"selector-combinator-blacklist": [],
+	"selector-combinator-disallowed-list": [],
+	"selector-combinator-whitelist": [],
+	"selector-id-pattern": "foo-[a-z]+",
+	"selector-list-comma-newline-before": "never-multi-line",
+	"selector-list-comma-space-after": "always-multi-line",
+	"selector-max-attribute": [
+    3,
+    {
+      "ignoreAttributes": []
+    }
+  ],
+	"selector-max-class": 3,
+	"selector-max-combinators": 3,
+	"selector-max-compound-selectors": 3,
+	"selector-max-id": [
+    3, {
+      "ignoreContextFunctionalPseudoClasses": []
+    }
+  ],
+	"selector-max-pseudo-class": 3,
+	"selector-max-specificity": [
+    "0,2,0",
+    {
+      "ignoreSelectors": []
+    }
+  ],
+	"selector-max-type": 3,
+	"selector-max-universal": 3,
+	"selector-nested-pattern": "foo-[a-z]+",
+	"selector-no-qualifying-type": [
+    true,
+    {
+      "ignore": []
+    }
+  ],
+	"selector-no-vendor-prefix": [
+    true,
+    {
+      "ignoreSelectors": []
+    }
+  ],
+	"selector-pseudo-class-allowed-list": [],
+	"selector-pseudo-class-blacklist": [],
+	"selector-pseudo-class-disallowed-list": [],
+	"selector-pseudo-class-whitelist": [],
+	"selector-pseudo-element-allowed-list": [],
+	"selector-pseudo-element-blacklist": [],
+	"selector-pseudo-element-disallowed-list": [],
+	"selector-pseudo-element-whitelist": [],
+	"shorthand-property-no-redundant-values": true,
+	"string-quotes": [
+    "double",
+    {
+      "avoidEscape": true
+    }
+  ],
+	"time-min-milliseconds": [
+    100,
+    {
+      "ignore": []
+    }
+  ],
+	"unicode-bom": "always",
+	"unit-allowed-list": [],
+	"unit-blacklist": [],
+	"unit-disallowed-list": [],
+	"unit-whitelist": [],
+	"value-keyword-case": [
+    "lower",
+    {
+      "ignoreKeywords": [],
+      "ignoreProperties": [],
+      "ignoreFunctions": []
+    }
+  ],
+  "value-list-comma-newline-before": "never-multi-line",
+	"value-no-vendor-prefix": [
+    true,
+    {
+      "ignoreValues": []
+    }
+  ]  
 }
