--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "stylelint": "^14.2.0",
     "stylelint-a11y": "^1.2.3",
     "stylelint-config-css-modules": "^3.0.0",
+    "stylelint-config-idiomatic-order": "^8.1.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended": "^6.0.0",
     "stylelint-config-recommended-scss": "^5.0.2",
@@ -31,8 +32,5 @@
     "stylelint-scss": "^4.1.0",
     "stylelint-selector-bem-pattern": "^2.1.1",
     "stylelint-suitcss": "^5.0.0"
-  },
-  "devDependencies": {
-    "stylelint-config-idiomatic-order": "^8.1.0"
   }
 }
