--- a/docs/multiple-tests/all-patterns-config/src/.stylelintrc
+++ b/docs/multiple-tests/all-patterns-config/src/.stylelintrc
@@ -1,24 +1,15 @@
 {
   "extends": [
     "stylelint-config-standard",
-    "stylelint-config-recommended",
-    "stylelint-config-suitcss",
-    "stylelint-config-wordpress",
-    "stylelint-config-slds",
-    "stylelint-config-prettier",
-    "stylelint-rscss/config"
+    "stylelint-config-slds"
   ],
   "plugins":[
     "stylelint-order",
-    "stylelint-suitcss",
     "stylelint-scss",
-    "stylelint-csstree-validator",
     "stylelint-declaration-strict-value",
-    "stylelint-declaration-use-variable",
     "stylelint-selector-bem-pattern"
   ],
   "rules": {
-    "csstree/validator": true,
     "scale-unlimited/declaration-strict-value": "color",
     "sh-waqar/declaration-use-variable": "/color/",
     "plugin/selector-bem-pattern": {
