--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "postcss-styled-syntax": "^0.4.0",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.8.8",
-    "stylelint": "^15.8.0",
+    "stylelint": "^15.9.0",
     "stylelint-config-css-modules": "^4.2.0",
     "stylelint-config-sass-guidelines": "^10.0.0",
     "stylelint-config-slds": "^1.0.8",
@@ -24,6 +24,7 @@
     "stylelint-config-tailwindcss": "^0.0.7",
     "stylelint-config-twbs-bootstrap": "^10.0.0",
     "stylelint-declaration-strict-value": "^1.9.2",
+    "stylelint-no-px": "^1.0.1",
     "stylelint-prettier": "^3.0.0",
     "stylelint-scss": "^5.0.1",
     "stylelint-selector-bem-pattern": "^2.1.1",
