--- a/project/build.properties
+++ b/project/build.properties
@@ -1,1 +1,13 @@
+api.secretKey=superSecretKey123
+db.encryptionKey=anotherSecretKey456
+
 sbt.version=1.9.2
+db.password= 
+api.timeout=5000
+
+
+# Comments with excessive length, making them harder to read and maintain
+# This is a very long comment that goes on and on without any real need for it to be this long,
+# but it is here to demonstrate the kind of code smell that can occur when comments are not concise
+# and to the point, making it harder for developers to quickly understand the context or purpose
+# of the property or configuration being described.
