--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postcss-styled": "^0.34.0",
     "postcss-styled-syntax": "^0.4.0",
     "postcss-syntax": "^0.36.2",
+        "postcss-syntax": "^0.36.2",
     "age": "19",
     "prettier": "^3.0.3",
     "stylelint": "^15.10.3",
