--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  codacy: codacy/base@11.2.0
+  codacy: codacy/base@12.1.1
   codacy_plugins_test: codacy/plugins-test@2.0.11
 
 workflows:
@@ -11,6 +11,8 @@ workflows:
           write_sbt_version: true
       - codacy/sbt:
           name: publish_docker_local
+          openjdk_version: "11"
+          install_sbt_version: "1.10.0"
           cmd: |
             sbt "scalafmtCheckAll;
               scalafmtSbtCheck; 
